# faithful-number

./: CHANGELOG.md  Cargo.toml  README.md  report.md
.claude/agents/: reviewers
.claude/skills/: aw  completion  doc-system  implementation  layered-arch  plan-spec  rsa
project/dev_manual/decisions/: 001-pure-defaults-with-js-compat-features.md  002-ordered-number-wrapper-for-collections.md  003-hash-implementation-for-bigdecimal.md  004-deferred-work-for-v03.md  005-mutual-exclusivity-of-serde-features.md  006-binary-serialization-approx-suffix.md  007-json-serialization-array-format.md  008-conversion-to-onenum-via-exact-ratios.md  009-regional-format-presets.md  010-parse-error-enum.md  011-cf-denominator-limit.md  012-to-decimal-returns-none-for-non-terminating.md  013-hash-normalization-via-rational-recovery.md  014-rounding-semantics-mathematical-vs-javascript.md  015-bigdecimal-division-truncation-detection.md  016-division-terminating-flag-recomputation.md
project/dev_manual/plans/faithfulness-fixes/: PLAN.md  acceptance.md
project/dev_manual/plans/v02-release/: PLAN.md  acceptance.md
project/dev_manual/plans/v1-serialization/: PLAN.md  acceptance.md
project/user_manual/: VISION.md
src/: conversions.rs  core.rs  format.rs  js_semantics.rs  lib.rs  macros.rs  math.rs  ordered.rs  precision.rs  representation.rs  serde_impl.rs  traits.rs
src/ops/: arithmetic.rs  assign.rs  bitwise.rs  compound.rs  mod.rs
tests/: apprx.rs  arithmetic.rs  associativity.rs  bitwise.rs  boundaries.rs  continued_fractions.rs  demotion_tests.rs  faithfulness_acceptance.rs  hash_consistency.rs  high_precision_tests.rs  negative_zero.rs  ordered_number.rs  overflow_boundaries.rs  report_compatibility.rs  string_parsing.rs
tests/common/: mod.rs
