[package]
name = "faithful-number"
version = "0.2.0"
edition = "2024"
description = "Exact arithmetic when possible, with explicit tracking when approximation is unavoidable"
repository = "https://github.com/example/faithful-number"
license = "MIT OR Apache-2.0"
keywords = ["arithmetic", "precision", "decimal", "rational", "number"]
categories = ["mathematics", "science"]

[dependencies]
rust_decimal = "1"
num-traits = "0.2.19"
num-rational = "0.4"
bigdecimal = "0.4"
rug = { version = "1.28.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
onenum = { git = "https://github.com/ThinkingJoules/onenum", optional = true }

[dev-dependencies]
serde_json = "1"
bincode = "1"

[features]
default = []

# Individual JS behaviors
js_nan_equality = []     # NaN == NaN returns true, enables Eq trait
js_bitwise = []          # Implicit ToInt32 coercion for &, |, ^, <<, >>
js_string_parse = []     # Empty string -> 0, whitespace trimming
js_rounding = []         # round() uses "half toward +∞" instead of "half away from zero"

# Umbrella feature
js_compat = ["js_nan_equality", "js_bitwise", "js_string_parse", "js_rounding"]

# High precision transcendentals via MPFR
high_precision = ["rug"]

# Rich display formatting and parsing
format = []

# String-based serde (JSON, TOML, etc.) - mutually exclusive with serde_bin
serde_str = ["serde"]

# Binary serde via onenum - mutually exclusive with serde_str
serde_bin = ["serde", "onenum"]
